connect to back end next

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
   </head>
   <body>
     <div id="App">
-      <div id="nav">
-        <div id="Home"></div>
-        <div id="Order"></div>
-        <div id="About"></div>
-        <div id="Contact"></div>
-        <div id="Order"></div>
-        <div id="Form"></div>
-      </div>
+      <ul class="nav">
+        <li><a href="#home" id="Home"></a></li>
+        <li><a href="#order" id="Order"></a></li>
+        <li><a href="#about" id="About"></a></li>
+        <li><a href="#contact" id="Contact"></a></li>
+        <li><a href="#form" id="Form"></a></li>
+      </ul>
+
+      <div id="main"></div>
       <script src="app.js"></script>
+      <script src="clearClicks.js"></script>
+      <script src="form.js"></script>
     </div>
   </body>
 </html>
