--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
     <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
     />
     <title>Document</title>
   </head>
@@ -24,11 +28,15 @@
     </div>
 
     <span
-      style="font-size: 30px; cursor: pointer; color: white"
+      style="font-size: 30px; cursor: pointer; color: #01b4fd"
       onclick="openNav()"
       >&#9776; Laced Studios
     </span>
+    <i class="fas fa-calendar-alt" style="font-size: 36px"></i>
     <div id="navv"></div>
+    <i class="fas fa-calendar-alt"></i>
+    <span class="material-icons md-48">face</span>
+    <div id="header"></div>
     <div id="main"></div>
     <script src="app.js"></script>
     <script src="clearClicks.js"></script>
