--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="#Home" id="Home">Home</a>
       <a href="#Appt" id="Appt">Appointment</a>
       <a href="#Contact" id="Contact">Contact</a>
-      <a href="#">Prices</a>
+      <a href="#Prices" id="Prices">Prices</a>
     </div>
 
     <span
@@ -39,6 +39,7 @@
     <div id="header"></div>
     <div id="main"></div>
     <script src="app.js"></script>
+    <script src="Prices.js"></script>
     <script src="clearClicks.js"></script>
     <script src="form.js"></script>
     <script src="nav.js"></script>
